Fixes #25762: Sometimes too long properties values move out actions buttons from window

--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-main.scss
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-main.scss
@@ -128,6 +128,7 @@ pre.json-beautify, .content-wrapper pre.json-beautify{
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
+  overflow-wrap: anywhere;
 }
 pre.json-beautify.toggle, .content-wrapper pre.json-beautify.toggle{
   height:auto;
